# github-cost-center

./: Dockerfile  README.md  enrich_seksjon.py  main.py  map_teams.py  nais.yaml  pyproject.toml  summarize_costs.py  visualize.py
.github/: dependabot.yml
.github/workflows/: automerge.yaml  deploy.yaml
