[project]
name = "github-cost-dashboard"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.32",
    "google-cloud-storage==2.18.2",
    "google-cloud-bigquery==3.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]