[project]
name = "github-cost-dashboard"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "python-multipart==0.0.32",
    "google-cloud-storage==3.13.0",
    "google-cloud-bigquery==3.42.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]